# Python_Web_module_15

Example/: Poetry_commands.txt
Example/solution/: main.py  pyproject.toml  sql_app.db
Example/solution/databases/: crud.py  models.py  shemas.py
HomeWorks/: scrapy_alarm_backup.db
HomeWorks/alarm_news_api/: main.py  pyproject.toml
HomeWorks/alarm_news_api/alarm_spyder/: Scrapy_commands.txt  alarm_info.json  bots_launch.py  news_info.json  news_info_storage.json  scrapy_alarm.db
HomeWorks/alarm_news_api/alarm_spyder/alarm_spyder/: items.py  middlewares.py  models.py  pipelines.py
HomeWorks/alarm_news_api/alarm_spyder/alarm_spyder/spiders/: air_raid_alarms_kyiv.py
HomeWorks/alarm_news_api/databases/: crud.py  db.py  models.py  shemas.py
HomeWorks/alarm_spyder/: Scrapy_commands.txt  alarm_info.json  alarm_info.py  news_info.json  news_info.py  scrapy.cfg  scrapy_alarm.db
HomeWorks/alarm_spyder/alarm_spyder/: middlewares.py  models.py  pipelines.py  settings.py
HomeWorks/alarm_spyder/alarm_spyder/spiders/: air_raid_alarms_kyiv.py  news.py  news_scrupy_selenium.py
Lecture/FastAPI/: FastAPI_test.py  FastApi_commands.txt
Lecture/OpenAPI/: flask_api.py
