[tool.poetry]
name = "alarm-news-api"
version = "0.1.0"
description = ""
authors = ["Serhii Korobchenko <jchild2008@gmail.com>"]
readme = "README.md"
packages = [{include = "alarm_news_api"}]

[tool.poetry.dependencies]
python = "^3.10"
aiosqlite = "^0.18.0"
fastapi = "^0.89.1"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
sqlalchemy = "^1.4.46"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
